Begin the lexicon and small design update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="description" content="Traducteur de vieux François pour vos textes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,6 +25,7 @@
         <h1>Le traducteur de vieux François</h1>
         <h2>Convertissez rapidement vos textes en vieux François.</h2>
         <h3>D'après les techniques de <a href="http://courtoisement.fr/">http://courtoisement.fr/</a></h3>
+        <strong style="color: red">Site en construction!</strong>
     </header>
     <div id="main-form-wrap">
         <form id="main-form">
